@@ -37,28 +37,28 @@ import org.elasticsearch.common.unit.TimeValue;
 import org.elasticsearch.common.util.concurrent.AtomicArray;
 import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.index.IndexNotFoundException;
-import org.elasticsearch.index.VersionType;
 import org.elasticsearch.index.IndexingPressure;
+import org.elasticsearch.index.VersionType;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.VersionUtils;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
+import java.util.function.Consumer;
 import java.util.function.Function;
 
 import static java.util.Collections.emptySet;
-import static java.util.Collections.singleton;
 import static org.mockito.Matchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 public class TransportBulkActionIndicesThatCannotBeCreatedTests extends ESTestCase {
+    private static final Consumer<String> noop = index -> {};
+
     public void testNonExceptional() {
         BulkRequest bulkRequest = new BulkRequest();
         bulkRequest.add(new IndexRequest(randomAlphaOfLength(5)));
@@ -66,11 +66,11 @@ public class TransportBulkActionIndicesThatCannotBeCreatedTests extends ESTestCa
         bulkRequest.add(new DeleteRequest(randomAlphaOfLength(5)));
         bulkRequest.add(new UpdateRequest(randomAlphaOfLength(5), randomAlphaOfLength(5)));
         // Test emulating that index can be auto-created
-        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> true);
+        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> true, noop);
         // Test emulating that index cannot be auto-created
-        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> false);
+        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> false, noop);
         // Test emulating auto_create_index=true with some indices already created.
-        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> randomBoolean());
+        indicesThatCannotBeCreatedTestCase(emptySet(), bulkRequest, index -> randomBoolean(), noop);
     }
 
     public void testAllFail() {
@@ -79,7 +79,7 @@ public class TransportBulkActionIndicesThatCannotBeCreatedTests extends ESTestCa
         bulkRequest.add(new IndexRequest("can't"));
         bulkRequest.add(new DeleteRequest("do").version(0).versionType(VersionType.EXTERNAL));
         bulkRequest.add(new UpdateRequest("nothin", randomAlphaOfLength(5)));
-        indicesThatCannotBeCreatedTestCase(new HashSet<>(Arrays.asList("no", "can't", "do", "nothin")), bulkRequest, index -> {
+        indicesThatCannotBeCreatedTestCase(Set.of("no", "can't", "do", "nothin"), bulkRequest, index -> true, index -> {
             throw new IndexNotFoundException("Can't make it because I say so");
         });
     }
@@ -89,24 +89,16 @@ public class TransportBulkActionIndicesThatCannotBeCreatedTests extends ESTestCa
         bulkRequest.add(new IndexRequest("ok"));
         bulkRequest.add(new IndexRequest("bad"));
         // Emulate auto_create_index=-bad,+*
-        indicesThatCannotBeCreatedTestCase(singleton("bad"), bulkRequest, index -> {
+        indicesThatCannotBeCreatedTestCase(Set.of("bad"), bulkRequest, index -> true, index -> {
             if (index.equals("bad")) {
                 throw new IndexNotFoundException("Can't make it because I say so");
             }
-            return true;
-        });
-        // Emulate auto_create_index=false but the "ok" index already exists
-        indicesThatCannotBeCreatedTestCase(singleton("bad"), bulkRequest, index -> {
-            if (index.equals("bad")) {
-                throw new IndexNotFoundException("Can't make it because I say so");
-            }
-            return false;
         });
     }
 
 
     private void indicesThatCannotBeCreatedTestCase(Set<String> expected,
-            BulkRequest bulkRequest, Function<String, Boolean> shouldAutoCreate) {
+            BulkRequest bulkRequest, Function<String, Boolean> shouldAutoCreate, Consumer<String> simulateAutoCreate) {
         ClusterService clusterService = mock(ClusterService.class);
         ClusterState state = mock(ClusterState.class);
         when(state.getMetadata()).thenReturn(Metadata.EMPTY_METADATA);
@@ -124,8 +116,15 @@ public class TransportBulkActionIndicesThatCannotBeCreatedTests extends ESTestCa
         final ExecutorService direct = EsExecutors.newDirectExecutorService();
         when(threadPool.executor(anyString())).thenReturn(direct);
 
+        final IndexNameExpressionResolver indexNameExpressionResolver = new IndexNameExpressionResolver() {
+            @Override
+            public boolean hasIndexAbstraction(String indexAbstraction, ClusterState state) {
+                return shouldAutoCreate.apply(indexAbstraction) == false;
+            }
+        };
+
         TransportBulkAction action = new TransportBulkAction(threadPool, mock(TransportService.class), clusterService,
-                null, null, mock(ActionFilters.class), new IndexNameExpressionResolver(),
+            null, null, mock(ActionFilters.class), indexNameExpressionResolver,
             new IndexingPressure(Settings.EMPTY)) {
             @Override
             void executeBulk(Task task, BulkRequest bulkRequest, long startTimeNanos, ActionListener<BulkResponse> listener,
@@ -135,10 +134,24 @@ public class TransportBulkActionIndicesThatCannotBeCreatedTests extends ESTestCa
 
             @Override
             void createIndex(String index, TimeValue timeout, Version minNodeVersion, ActionListener<CreateIndexResponse> listener) {
-                // If we try to create an index just immediately assume it worked
-                listener.onResponse(new CreateIndexResponse(true, true, index) {});
+                try {
+                    simulateAutoCreate.accept(index);
+                    // If we try to create an index just immediately assume it worked
+                    listener.onResponse(new CreateIndexResponse(true, true, index) {
+                    });
+                } catch (Exception e) {
+                    listener.onFailure(e);
+                }
             }
         };
-        action.doExecute(null, bulkRequest, null);
+        action.doExecute(null, bulkRequest, new ActionListener<>() {
+            @Override
+            public void onResponse(BulkResponse bulkItemResponses) {}
+
+            @Override
+            public void onFailure(Exception e) {
+                throw new AssertionError(e);
+            }
+        });
     }
 }
